# ChangeLog for dev-python/py-rrdtool
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/py-rrdtool/Attic/ChangeLog,v 1.8 2006/06/05 17:51:26 pva Exp $

  05 Jun 2006; Peter Volkov <pva@gentoo.org> py-rrdtool-0.2.1-r1.ebuild:
  Fixed eutils inheritance as we use epatch.

  01 Jun 2006; Markus Ullmann <jokey@gentoo.org>
  +files/py-rrdtool-rrdtool12.patch, py-rrdtool-0.2.1-r1.ebuild:
  Adding rrdtool 1.2 patch wrt bug #133422 thanks to Angelo Leto

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org>
  py-rrdtool-0.2.1-r1.ebuild:
  Mark 0.2.1-r1 ~ia64

*py-rrdtool-0.2.1-r1 (27 Jul 2005)

  27 Jul 2005; Benjamin Smee <strerror@gentoo.org> metadata.xml,
  +py-rrdtool-0.2.1-r1.ebuild:
  Changed to reflect that it won't compile with > rrdtool-1.2.

  28 Nov 2004; Eldad Zack <eldad@gentoo.org> py-rrdtool-0.2.1.ebuild:
  x86 stable

  14 Oct 2004; David Holm <dholm@gentoo.org> py-rrdtool-0.2.1.ebuild:
  Added to ~ppc.

  04 Sep 2004; Jon Hood <squinky86@gentoo.org> py-rrdtool-0.2.1.ebuild:
  Remove src_compile and src_install (thanks lucass).

*py-rrdtool-0.2.1 (04 Sep 2004)

  04 Sep 2004; Jon Hood <squinky86@gentoo.org> +metadata.xml,
  +py-rrdtool-0.2.1.ebuild:
  Initial import, closes #59582. Thanks to Fernando A. Serboncini
  <fserb@terra.com.br> for the ebuild.
