@@ -1,7 +1,27 @@
-MD5 fc4cd8756285313b1f57057a16ce7b28 ChangeLog 1338
-MD5 6d07d4ccb5fd15f0c5796a43dd2d5ec3 files/digest-py-rrdtool-0.2.1 247
-MD5 6d07d4ccb5fd15f0c5796a43dd2d5ec3 files/digest-py-rrdtool-0.2.1-r1 247
+AUX py-rrdtool-rrdtool12.patch 688 RMD160 27409885161bbc58fe3244811a94230eafb2f88a SHA1 8af92a689fdb06d700cbfdfc5b52014b398af97f SHA256 12abb34ba57b122befba3b52dc166359c53cb37701251355fe2f671f457cb3d5
 MD5 354ca7f69569ffbd95527947c9c2223e files/py-rrdtool-rrdtool12.patch 688
-MD5 f34e3c8858756da0001b12d2d3fa1af2 metadata.xml 159
-MD5 4cc131a683d07361d399f338e8351040 py-rrdtool-0.2.1-r1.ebuild 631
+RMD160 27409885161bbc58fe3244811a94230eafb2f88a files/py-rrdtool-rrdtool12.patch 688
+SHA256 12abb34ba57b122befba3b52dc166359c53cb37701251355fe2f671f457cb3d5 files/py-rrdtool-rrdtool12.patch 688
+DIST py-rrdtool-0.2.1.tar.gz 18809 RMD160 d628555f678f575bb137362a4d2b66749ab77e08 SHA1 a2d00b2ccec8bd7c61e81edfd0992eed35e55ab1 SHA256 3a72b6483c4da110e0a3563f0b0f233d891b78a0fa226d6981e9cc7dd5a53f05
+EBUILD py-rrdtool-0.2.1-r1.ebuild 606 RMD160 39768ebba8aa4338ffa83949948dc969bc276230 SHA1 442c71aaba9f637c257ede10dd06e3a5531c7047 SHA256 97b3bcfc6c6975e966c90c4d4502bb8178a3107edadf5f963ef4f7e65cc3a70b
+MD5 c15b48cb0054038e5f319cc065faba4c py-rrdtool-0.2.1-r1.ebuild 606
+RMD160 39768ebba8aa4338ffa83949948dc969bc276230 py-rrdtool-0.2.1-r1.ebuild 606
+SHA256 97b3bcfc6c6975e966c90c4d4502bb8178a3107edadf5f963ef4f7e65cc3a70b py-rrdtool-0.2.1-r1.ebuild 606
+EBUILD py-rrdtool-0.2.1.ebuild 500 RMD160 826527f12263cc10e2c73a1fff404a2fde80e501 SHA1 39864e078c14395f7905d5a6ac201805e32596aa SHA256 98485d04f8f7a436698e814e448f43265955e5cd794ffd85cb4b1758575e3f7b
 MD5 2b83c4820c2e2533cf5d59152c608f8d py-rrdtool-0.2.1.ebuild 500
+RMD160 826527f12263cc10e2c73a1fff404a2fde80e501 py-rrdtool-0.2.1.ebuild 500
+SHA256 98485d04f8f7a436698e814e448f43265955e5cd794ffd85cb4b1758575e3f7b py-rrdtool-0.2.1.ebuild 500
+MISC ChangeLog 1443 RMD160 d48484ab5a6685d68aad0f67ad583304b54bf908 SHA1 c16d906f1d1c351a0d5fe8655783c145022403fa SHA256 b02d63edcfa60088a583636703220892a575223162eabc7637798375b35ebbaa
+MD5 bdbd4060de143a0cd1656f027ea8be4d ChangeLog 1443
+RMD160 d48484ab5a6685d68aad0f67ad583304b54bf908 ChangeLog 1443
+SHA256 b02d63edcfa60088a583636703220892a575223162eabc7637798375b35ebbaa ChangeLog 1443
+MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
+MD5 f34e3c8858756da0001b12d2d3fa1af2 metadata.xml 159
+RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b metadata.xml 159
+SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 metadata.xml 159
+MD5 6d07d4ccb5fd15f0c5796a43dd2d5ec3 files/digest-py-rrdtool-0.2.1 247
+RMD160 d07107e524b2c6cb9e99663c92aaf107d474425f files/digest-py-rrdtool-0.2.1 247
+SHA256 322eb0044a32eb3a50a21bcc446d8b8655786872ff4e27c66f01837cb2e86a48 files/digest-py-rrdtool-0.2.1 247
+MD5 6d07d4ccb5fd15f0c5796a43dd2d5ec3 files/digest-py-rrdtool-0.2.1-r1 247
+RMD160 d07107e524b2c6cb9e99663c92aaf107d474425f files/digest-py-rrdtool-0.2.1-r1 247
+SHA256 322eb0044a32eb3a50a21bcc446d8b8655786872ff4e27c66f01837cb2e86a48 files/digest-py-rrdtool-0.2.1-r1 247
