@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/py-rrdtool
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/py-rrdtool/Attic/ChangeLog,v 1.8 2006/06/05 17:51:26 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/py-rrdtool/Attic/ChangeLog,v 1.9 2006/11/18 12:50:26 cedk Exp $
+
+  18 Nov 2006; Cedric Krier <cedk@gentoo.org> py-rrdtool-0.2.1-r1.ebuild:
+  fix depend for bug #133422
 
   05 Jun 2006; Peter Volkov <pva@gentoo.org> py-rrdtool-0.2.1-r1.ebuild:
   Fixed eutils inheritance as we use epatch.
